--- a/public/src/page/admin/_customer_portal.scss
+++ b/public/src/page/admin/_customer_portal.scss
@@ -42,8 +42,12 @@
 			min-height: 0px;
 		}
 		.captcha{
-			@include margin(10px 0 0 130px);
+			@include margin(10px 0 0 136px);
 			min-height: 0px;
+
+			#captcha {
+				margin-top: 3px;
+			}
 		}
 		.checkbox label{ @include margin-left(0); }
 		.multiple-check{
